Insercion de Data en Atlas

--- a/BD2-Lab3.ipynb
+++ b/BD2-Lab3.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 122,
    "id": "1a26b222-9330-4d63-adda-4956716a6ca9",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 123,
    "id": "f9e4b189-428c-4e8c-8b58-a11389507c5b",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 124,
    "id": "cfdc9490",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 125,
    "id": "ad90cd64",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
        "(1000, 17)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 126,
    "id": "28f7a7f9",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
        "4  10:37      Ewallet  604.17                 4.761905       30.2085     5.3  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 127,
    "id": "69ab2a38",
    "metadata": {},
    "outputs": [
@@ -484,7 +484,7 @@
        "999  618.38                 4.761905       30.9190     6.6  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 128,
    "id": "ece77b95",
    "metadata": {},
    "outputs": [
@@ -530,7 +530,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 129,
    "id": "ff986f28",
    "metadata": {},
    "outputs": [
@@ -559,13 +559,35 @@
        "0"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "574994d5",
+   "metadata": {},
+   "source": [
+    "### Transformacion de campos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "30b5d065",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Combinar los campos de fecha y hora en un solo campo\n",
+    "data['DateTime'] = pd.to_datetime(data['Date'] + ' ' + data['Time'])\n",
+    "\n",
+    "# Eliminar las columnas originales del data frame\n",
+    "data.drop(['Date', 'Time'], axis=1, inplace=True)"
    ]
   },
   {
@@ -578,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 131,
    "id": "b1b4cf19-9daa-4b97-86c2-d56bcfb33cf3",
    "metadata": {},
    "outputs": [],
@@ -595,8 +617,7 @@
     "    'Quantity': 'Cantidad',\n",
     "    'Tax 5%': 'Impuesto',\n",
     "    'Total': 'Total',\n",
-    "    'Date': 'Fecha',\n",
-    "    'Time': 'Hora',\n",
+    "    'DateTime': 'Fecha y hora',\n",
     "    'Payment': 'Metodo de Pago',\n",
     "    'cogs': 'Costo de Bienes Vendidos (COGS)',\n",
     "    'gross margin percentage': 'Porcentaje de Margen Bruto',\n",
@@ -621,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 132,
    "id": "b319ad6d-2680-4217-851b-4cfc33916fee",
    "metadata": {},
    "outputs": [],
@@ -640,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 133,
    "id": "d0f94750",
    "metadata": {},
    "outputs": [
@@ -675,13 +696,12 @@
        "      <th>Cantidad</th>\n",
        "      <th>Impuesto</th>\n",
        "      <th>Total</th>\n",
-       "      <th>Fecha</th>\n",
-       "      <th>Hora</th>\n",
        "      <th>Metodo de Pago</th>\n",
        "      <th>Costo de Bienes Vendidos (COGS)</th>\n",
        "      <th>Porcentaje de Margen Bruto</th>\n",
        "      <th>Ingreso Bruto</th>\n",
        "      <th>Calificacion</th>\n",
+       "      <th>Fecha y hora</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -697,13 +717,12 @@
        "      <td>7</td>\n",
        "      <td>26.1415</td>\n",
        "      <td>548.9715</td>\n",
-       "      <td>1/5/2019</td>\n",
-       "      <td>13:08</td>\n",
        "      <td>Ewallet</td>\n",
        "      <td>522.83</td>\n",
        "      <td>4.761905</td>\n",
        "      <td>26.1415</td>\n",
        "      <td>9.1</td>\n",
+       "      <td>2019-01-05 13:08:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -717,13 +736,12 @@
        "      <td>5</td>\n",
        "      <td>3.8200</td>\n",
        "      <td>80.2200</td>\n",
-       "      <td>3/8/2019</td>\n",
-       "      <td>10:29</td>\n",
        "      <td>Cash</td>\n",
        "      <td>76.40</td>\n",
        "      <td>4.761905</td>\n",
        "      <td>3.8200</td>\n",
        "      <td>9.6</td>\n",
+       "      <td>2019-03-08 10:29:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -737,13 +755,12 @@
        "      <td>7</td>\n",
        "      <td>16.2155</td>\n",
        "      <td>340.5255</td>\n",
-       "      <td>3/3/2019</td>\n",
-       "      <td>13:23</td>\n",
        "      <td>Credit card</td>\n",
        "      <td>324.31</td>\n",
        "      <td>4.761905</td>\n",
        "      <td>16.2155</td>\n",
        "      <td>7.4</td>\n",
+       "      <td>2019-03-03 13:23:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -757,13 +774,12 @@
        "      <td>8</td>\n",
        "      <td>23.2880</td>\n",
        "      <td>489.0480</td>\n",
-       "      <td>1/27/2019</td>\n",
-       "      <td>20:33</td>\n",
        "      <td>Ewallet</td>\n",
        "      <td>465.76</td>\n",
        "      <td>4.761905</td>\n",
        "      <td>23.2880</td>\n",
        "      <td>8.4</td>\n",
+       "      <td>2019-01-27 20:33:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -777,13 +793,12 @@
        "      <td>7</td>\n",
        "      <td>30.2085</td>\n",
        "      <td>634.3785</td>\n",
-       "      <td>2/8/2019</td>\n",
-       "      <td>10:37</td>\n",
        "      <td>Ewallet</td>\n",
        "      <td>604.17</td>\n",
        "      <td>4.761905</td>\n",
        "      <td>30.2085</td>\n",
        "      <td>5.3</td>\n",
+       "      <td>2019-02-08 10:37:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -804,22 +819,22 @@
        "3       Health and beauty            58.22         8   23.2880  489.0480   \n",
        "4       Sports and travel            86.31         7   30.2085  634.3785   \n",
        "\n",
-       "       Fecha   Hora Metodo de Pago  Costo de Bienes Vendidos (COGS)  \\\n",
-       "0   1/5/2019  13:08        Ewallet                           522.83   \n",
-       "1   3/8/2019  10:29           Cash                            76.40   \n",
-       "2   3/3/2019  13:23    Credit card                           324.31   \n",
-       "3  1/27/2019  20:33        Ewallet                           465.76   \n",
-       "4   2/8/2019  10:37        Ewallet                           604.17   \n",
+       "  Metodo de Pago  Costo de Bienes Vendidos (COGS)  Porcentaje de Margen Bruto  \\\n",
+       "0        Ewallet                           522.83                    4.761905   \n",
+       "1           Cash                            76.40                    4.761905   \n",
+       "2    Credit card                           324.31                    4.761905   \n",
+       "3        Ewallet                           465.76                    4.761905   \n",
+       "4        Ewallet                           604.17                    4.761905   \n",
        "\n",
-       "   Porcentaje de Margen Bruto  Ingreso Bruto  Calificacion  \n",
-       "0                    4.761905        26.1415           9.1  \n",
-       "1                    4.761905         3.8200           9.6  \n",
-       "2                    4.761905        16.2155           7.4  \n",
-       "3                    4.761905        23.2880           8.4  \n",
-       "4                    4.761905        30.2085           5.3  "
+       "   Ingreso Bruto  Calificacion         Fecha y hora  \n",
+       "0        26.1415           9.1  2019-01-05 13:08:00  \n",
+       "1         3.8200           9.6  2019-03-08 10:29:00  \n",
+       "2        16.2155           7.4  2019-03-03 13:23:00  \n",
+       "3        23.2880           8.4  2019-01-27 20:33:00  \n",
+       "4        30.2085           5.3  2019-02-08 10:37:00  "
       ]
      },
-     "execution_count": 90,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -830,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 134,
    "id": "5a3a4c55",
    "metadata": {},
    "outputs": [
@@ -865,13 +880,12 @@
        "      <th>Cantidad</th>\n",
        "      <th>Impuesto</th>\n",
        "      <th>Total</th>\n",
-       "      <th>Fecha</th>\n",
-       "      <th>Hora</th>\n",
        "      <th>Metodo de Pago</th>\n",
        "      <th>Costo de Bienes Vendidos (COGS)</th>\n",
        "      <th>Porcentaje de Margen Bruto</th>\n",
        "      <th>Ingreso Bruto</th>\n",
        "      <th>Calificacion</th>\n",
+       "      <th>Fecha y hora</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -887,13 +901,12 @@
        "      <td>1</td>\n",
        "      <td>2.0175</td>\n",
        "      <td>42.3675</td>\n",
-       "      <td>1/29/2019</td>\n",
-       "      <td>13:46</td>\n",
        "      <td>Ewallet</td>\n",
        "      <td>40.35</td>\n",
        "      <td>4.761905</td>\n",
        "      <td>2.0175</td>\n",
        "      <td>6.2</td>\n",
+       "      <td>2019-01-29 13:46:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>996</th>\n",
@@ -907,13 +920,12 @@
        "      <td>10</td>\n",
        "      <td>48.6900</td>\n",
        "      <td>1022.4900</td>\n",
-       "      <td>3/2/2019</td>\n",
-       "      <td>17:16</td>\n",
        "      <td>Ewallet</td>\n",
        "      <td>973.80</td>\n",
        "      <td>4.761905</td>\n",
        "      <td>48.6900</td>\n",
        "      <td>4.4</td>\n",
+       "      <td>2019-03-02 17:16:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>997</th>\n",
@@ -927,13 +939,12 @@
        "      <td>1</td>\n",
        "      <td>1.5920</td>\n",
        "      <td>33.4320</td>\n",
-       "      <td>2/9/2019</td>\n",
-       "      <td>13:22</td>\n",
        "      <td>Cash</td>\n",
        "      <td>31.84</td>\n",
        "      <td>4.761905</td>\n",
        "      <td>1.5920</td>\n",
        "      <td>7.7</td>\n",
+       "      <td>2019-02-09 13:22:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>998</th>\n",
@@ -947,13 +958,12 @@
        "      <td>1</td>\n",
        "      <td>3.2910</td>\n",
        "      <td>69.1110</td>\n",
-       "      <td>2/22/2019</td>\n",
-       "      <td>15:33</td>\n",
        "      <td>Cash</td>\n",
        "      <td>65.82</td>\n",
        "      <td>4.761905</td>\n",
        "      <td>3.2910</td>\n",
        "      <td>4.1</td>\n",
+       "      <td>2019-02-22 15:33:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>999</th>\n",
@@ -967,13 +977,12 @@
        "      <td>7</td>\n",
        "      <td>30.9190</td>\n",
        "      <td>649.2990</td>\n",
-       "      <td>2/18/2019</td>\n",
-       "      <td>13:28</td>\n",
        "      <td>Cash</td>\n",
        "      <td>618.38</td>\n",
        "      <td>4.761905</td>\n",
        "      <td>30.9190</td>\n",
        "      <td>6.6</td>\n",
+       "      <td>2019-02-18 13:28:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -994,22 +1003,29 @@
        "998   Home and lifestyle            65.82         1    3.2910    69.1110   \n",
        "999  Fashion accessories            88.34         7   30.9190   649.2990   \n",
        "\n",
-       "         Fecha   Hora Metodo de Pago  Costo de Bienes Vendidos (COGS)  \\\n",
-       "995  1/29/2019  13:46        Ewallet                            40.35   \n",
-       "996   3/2/2019  17:16        Ewallet                           973.80   \n",
-       "997   2/9/2019  13:22           Cash                            31.84   \n",
-       "998  2/22/2019  15:33           Cash                            65.82   \n",
-       "999  2/18/2019  13:28           Cash                           618.38   \n",
+       "    Metodo de Pago  Costo de Bienes Vendidos (COGS)  \\\n",
+       "995        Ewallet                            40.35   \n",
+       "996        Ewallet                           973.80   \n",
+       "997           Cash                            31.84   \n",
+       "998           Cash                            65.82   \n",
+       "999           Cash                           618.38   \n",
        "\n",
-       "     Porcentaje de Margen Bruto  Ingreso Bruto  Calificacion  \n",
-       "995                    4.761905         2.0175           6.2  \n",
-       "996                    4.761905        48.6900           4.4  \n",
-       "997                    4.761905         1.5920           7.7  \n",
-       "998                    4.761905         3.2910           4.1  \n",
-       "999                    4.761905        30.9190           6.6  "
+       "     Porcentaje de Margen Bruto  Ingreso Bruto  Calificacion  \\\n",
+       "995                    4.761905         2.0175           6.2   \n",
+       "996                    4.761905        48.6900           4.4   \n",
+       "997                    4.761905         1.5920           7.7   \n",
+       "998                    4.761905         3.2910           4.1   \n",
+       "999                    4.761905        30.9190           6.6   \n",
+       "\n",
+       "            Fecha y hora  \n",
+       "995  2019-01-29 13:46:00  \n",
+       "996  2019-03-02 17:16:00  \n",
+       "997  2019-02-09 13:22:00  \n",
+       "998  2019-02-22 15:33:00  \n",
+       "999  2019-02-18 13:28:00  "
       ]
      },
-     "execution_count": 91,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1028,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 135,
    "id": "9599d39a",
    "metadata": {},
    "outputs": [
@@ -1188,13 +1204,53 @@
        "max        49.650000      10.00000  "
       ]
      },
-     "execution_count": 92,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90e7b926",
+   "metadata": {},
+   "source": [
+    "### Bulkwrite de la data a MongoDB Atlas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "99624efc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data inserted successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Paso 1: Convertir el data frame modificado a una lista de diccionarios\n",
+    "data_to_insert = df.to_dict(orient='records')\n",
+    "\n",
+    "# Paso 2: Conectarse a una instancia de monggoDB Atlas\n",
+    "mongo_uri = 'mongodb+srv://lei21752:pux2912@cluster.xjohdzx.mongodb.net/?retryWrites=true&w=majority'\n",
+    "client = MongoClient(mongo_uri)\n",
+    "\n",
+    "# Paso 3: Especificar la Base de datos y la colecion a usar\n",
+    "db = client['lab3'] \n",
+    "collection = db['ventas_supermercado']\n",
+    "\n",
+    "# Paso 4: Insertar la data en la coleccion\n",
+    "collection.insert_many(data_to_insert)\n",
+    "\n",
+    "print(\"Data inserted successfully.\")\n"
    ]
   }
  ],
