--- a/BD2-Lab3.ipynb
+++ b/BD2-Lab3.ipynb
@@ -21,10 +21,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "1a26b222-9330-4d63-adda-4956716a6ca9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\diego\\AppData\\Local\\Temp\\ipykernel_20752\\1715989467.py:1: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from pymongo import MongoClient\n",
@@ -41,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "f9e4b189-428c-4e8c-8b58-a11389507c5b",
    "metadata": {},
    "outputs": [],
@@ -60,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "cfdc9490",
    "metadata": {},
    "outputs": [
@@ -101,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "ad90cd64",
    "metadata": {},
    "outputs": [
@@ -111,7 +126,7 @@
        "(1000, 17)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "28f7a7f9",
    "metadata": {},
    "outputs": [
@@ -302,7 +317,7 @@
        "4  10:37      Ewallet  604.17                 4.761905       30.2085     5.3  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "69ab2a38",
    "metadata": {},
    "outputs": [
@@ -485,7 +500,7 @@
        "999  618.38                 4.761905       30.9190     6.6  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "ece77b95",
    "metadata": {},
    "outputs": [
@@ -531,7 +546,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "ff986f28",
    "metadata": {},
    "outputs": [
@@ -560,7 +575,7 @@
        "0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "299146ca",
    "metadata": {},
    "outputs": [],
@@ -594,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "30b5d065",
    "metadata": {},
    "outputs": [],
@@ -617,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "b1b4cf19-9daa-4b97-86c2-d56bcfb33cf3",
    "metadata": {},
    "outputs": [],
@@ -659,13 +674,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "b319ad6d-2680-4217-851b-4cfc33916fee",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Cargar el archivo CSV\n",
-    "df = pd.read_csv('ventas_supermercado.csv')"
+    "df = pd.read_csv('ventas_supermercado.csv', parse_dates=['fecha_hora'])"
    ]
   },
   {
@@ -678,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "d0f94750",
    "metadata": {},
    "outputs": [
@@ -836,15 +851,15 @@
        "3       Health and beauty   58.22         8   23.2880  489.0480      Ewallet   \n",
        "4       Sports and travel   86.31         7   30.2085  634.3785      Ewallet   \n",
        "\n",
-       "     cogs  porcentaje_margen  ingreso_bruto  calificacion           fecha_hora  \n",
-       "0  522.83           4.761905        26.1415           9.1  2019-01-05 13:08:00  \n",
-       "1   76.40           4.761905         3.8200           9.6  2019-03-08 10:29:00  \n",
-       "2  324.31           4.761905        16.2155           7.4  2019-03-03 13:23:00  \n",
-       "3  465.76           4.761905        23.2880           8.4  2019-01-27 20:33:00  \n",
-       "4  604.17           4.761905        30.2085           5.3  2019-02-08 10:37:00  "
+       "     cogs  porcentaje_margen  ingreso_bruto  calificacion          fecha_hora  \n",
+       "0  522.83           4.761905        26.1415           9.1 2019-01-05 13:08:00  \n",
+       "1   76.40           4.761905         3.8200           9.6 2019-03-08 10:29:00  \n",
+       "2  324.31           4.761905        16.2155           7.4 2019-03-03 13:23:00  \n",
+       "3  465.76           4.761905        23.2880           8.4 2019-01-27 20:33:00  \n",
+       "4  604.17           4.761905        30.2085           5.3 2019-02-08 10:37:00  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "id": "5a3a4c55",
    "metadata": {},
    "outputs": [
@@ -1020,15 +1035,15 @@
        "998   65.82           4.761905         3.2910           4.1   \n",
        "999  618.38           4.761905        30.9190           6.6   \n",
        "\n",
-       "              fecha_hora  \n",
-       "995  2019-01-29 13:46:00  \n",
-       "996  2019-03-02 17:16:00  \n",
-       "997  2019-02-09 13:22:00  \n",
-       "998  2019-02-22 15:33:00  \n",
-       "999  2019-02-18 13:28:00  "
+       "             fecha_hora  \n",
+       "995 2019-01-29 13:46:00  \n",
+       "996 2019-03-02 17:16:00  \n",
+       "997 2019-02-09 13:22:00  \n",
+       "998 2019-02-22 15:33:00  \n",
+       "999 2019-02-18 13:28:00  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1047,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "id": "9599d39a",
    "metadata": {},
    "outputs": [
@@ -1080,6 +1095,7 @@
        "      <th>porcentaje_margen</th>\n",
        "      <th>ingreso_bruto</th>\n",
        "      <th>calificacion</th>\n",
+       "      <th>fecha_hora</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1093,6 +1109,7 @@
        "      <td>1000.000000</td>\n",
        "      <td>1000.000000</td>\n",
        "      <td>1000.00000</td>\n",
+       "      <td>1000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
@@ -1104,17 +1121,7 @@
        "      <td>4.761905</td>\n",
        "      <td>15.379369</td>\n",
        "      <td>6.97270</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>26.494628</td>\n",
-       "      <td>2.923431</td>\n",
-       "      <td>11.708825</td>\n",
-       "      <td>245.885335</td>\n",
-       "      <td>234.17651</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>11.708825</td>\n",
-       "      <td>1.71858</td>\n",
+       "      <td>2019-02-14 15:30:27.480000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -1126,6 +1133,7 @@
        "      <td>4.761905</td>\n",
        "      <td>0.508500</td>\n",
        "      <td>4.00000</td>\n",
+       "      <td>2019-01-01 10:39:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
@@ -1137,6 +1145,7 @@
        "      <td>4.761905</td>\n",
        "      <td>5.924875</td>\n",
        "      <td>5.50000</td>\n",
+       "      <td>2019-01-24 17:58:45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
@@ -1148,6 +1157,7 @@
        "      <td>4.761905</td>\n",
        "      <td>12.088000</td>\n",
        "      <td>7.00000</td>\n",
+       "      <td>2019-02-13 17:37:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
@@ -1159,6 +1169,7 @@
        "      <td>4.761905</td>\n",
        "      <td>22.445250</td>\n",
        "      <td>8.50000</td>\n",
+       "      <td>2019-03-08 15:29:30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
@@ -1170,6 +1181,19 @@
        "      <td>4.761905</td>\n",
        "      <td>49.650000</td>\n",
        "      <td>10.00000</td>\n",
+       "      <td>2019-03-30 20:37:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>26.494628</td>\n",
+       "      <td>2.923431</td>\n",
+       "      <td>11.708825</td>\n",
+       "      <td>245.885335</td>\n",
+       "      <td>234.17651</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>11.708825</td>\n",
+       "      <td>1.71858</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1179,25 +1203,35 @@
        "            precio     cantidad     impuesto        total        cogs  \\\n",
        "count  1000.000000  1000.000000  1000.000000  1000.000000  1000.00000   \n",
        "mean     55.672130     5.510000    15.379369   322.966749   307.58738   \n",
-       "std      26.494628     2.923431    11.708825   245.885335   234.17651   \n",
        "min      10.080000     1.000000     0.508500    10.678500    10.17000   \n",
        "25%      32.875000     3.000000     5.924875   124.422375   118.49750   \n",
        "50%      55.230000     5.000000    12.088000   253.848000   241.76000   \n",
        "75%      77.935000     8.000000    22.445250   471.350250   448.90500   \n",
        "max      99.960000    10.000000    49.650000  1042.650000   993.00000   \n",
+       "std      26.494628     2.923431    11.708825   245.885335   234.17651   \n",
        "\n",
-       "       porcentaje_margen  ingreso_bruto  calificacion  \n",
-       "count        1000.000000    1000.000000    1000.00000  \n",
-       "mean            4.761905      15.379369       6.97270  \n",
-       "std             0.000000      11.708825       1.71858  \n",
-       "min             4.761905       0.508500       4.00000  \n",
-       "25%             4.761905       5.924875       5.50000  \n",
-       "50%             4.761905      12.088000       7.00000  \n",
-       "75%             4.761905      22.445250       8.50000  \n",
-       "max             4.761905      49.650000      10.00000  "
+       "       porcentaje_margen  ingreso_bruto  calificacion  \\\n",
+       "count        1000.000000    1000.000000    1000.00000   \n",
+       "mean            4.761905      15.379369       6.97270   \n",
+       "min             4.761905       0.508500       4.00000   \n",
+       "25%             4.761905       5.924875       5.50000   \n",
+       "50%             4.761905      12.088000       7.00000   \n",
+       "75%             4.761905      22.445250       8.50000   \n",
+       "max             4.761905      49.650000      10.00000   \n",
+       "std             0.000000      11.708825       1.71858   \n",
+       "\n",
+       "                       fecha_hora  \n",
+       "count                        1000  \n",
+       "mean   2019-02-14 15:30:27.480000  \n",
+       "min           2019-01-01 10:39:00  \n",
+       "25%           2019-01-24 17:58:45  \n",
+       "50%           2019-02-13 17:37:00  \n",
+       "75%           2019-03-08 15:29:30  \n",
+       "max           2019-03-30 20:37:00  \n",
+       "std                           NaN  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1216,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "id": "99624efc",
    "metadata": {},
    "outputs": [
