Enlace Video Youtube

--- a/BD2-Lab3.ipynb
+++ b/BD2-Lab3.ipynb
@@ -1280,6 +1280,22 @@
     "\n",
     "print(\"Data inserted successfully.\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c07fc5b8",
+   "metadata": {},
+   "source": [
+    "## Enlace video"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d50dcbbb",
+   "metadata": {},
+   "source": [
+    "https://youtu.be/KbTf3cuS2Q4"
+   ]
   }
  ],
  "metadata": {
